reaction game created

--- a/Personal/Home/templates/base.html
+++ b/Personal/Home/templates/base.html
@@ -60,6 +60,7 @@
     {% block random_word_generator %} {% endblock %}
     {% block pdf_parser %} {% endblock %}
     {% block display_content %} {% endblock %}
+    {% block reaction_time_test %} {% endblock %}
     {% block 404 %} {% endblock %}
     {% block 500 %} {% endblock %}
 
@@ -75,5 +76,6 @@
     {% block pdf_loader_script %} {% endblock %}
     {% block about_me_script %} {% endblock %}
     {% block connect_script %} {% endblock %}
+    {% block reaction_time_test_script %} {% endblock %}
   </body>
 </html>
