--- a/Personal/Home/templates/project_home_page.html
+++ b/Personal/Home/templates/project_home_page.html
@@ -38,6 +38,16 @@
 
     <hr class="target_header">
 
+     <div class="project_home_section">
+        <div class="project_home_project_description_div">
+            <a class="project_home_project_description_links" id="upload_pdf_link" href="{% url 'reaction_time_test' %}"><p>Reaction Test</p></a>
+        </div>
+        <div class="project_home_project_thumbnail_div">
+            <img class="project_home_project_thumbnail_img" src="{% static 'gif/Reaction_Time.gif' %}" alt="Reaction Time Test Thumbnail">
+        </div>
+
+    </div>
+
 
 
 
