--- a/Personal/Home/templates/base.html
+++ b/Personal/Home/templates/base.html
@@ -19,7 +19,8 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-    <title>Jarret Laberdee</title>
+    <link rel="shortcut icon" href="{% static 'ico/favicon.ico' %}" type="image">
+    <title>CarnsJalone</title>
   </head>
   <body id="body_id">
     <div id="main_header_outer">
