LinkedIn Bot Added

--- a/Personal/Home/templates/base.html
+++ b/Personal/Home/templates/base.html
@@ -62,6 +62,7 @@
     {% block pdf_parser %} {% endblock %}
     {% block display_content %} {% endblock %}
     {% block reaction_time_test %} {% endblock %}
+    {% block linkedin_bot %} {% endblock %}
     {% block 404 %} {% endblock %}
     {% block 500 %} {% endblock %}
 
@@ -78,5 +79,6 @@
     {% block about_me_script %} {% endblock %}
     {% block connect_script %} {% endblock %}
     {% block reaction_time_test_script %} {% endblock %}
+    {% block linkedin_bot_script %} {% endblock %}
   </body>
 </html>
