email template fixed from https to http

--- a/Personal/Home/templates/email/connect_response.html
+++ b/Personal/Home/templates/email/connect_response.html
@@ -22,9 +22,7 @@
                 some people don't like providing that information. If that is a better line of communication for you, feel free to give me a call or send me a text at (419)-206-8550.
             </p>
 
-            <p>Feel free to come back and check out <a href="https://www.carnsjalone.com" target="_blank">my website</a> at any time... I will frequently be adding new projects and the like. </p>
-
-
+            <p>Feel free to come back and check out <a href="http://www.carnsjalone.com" target="_blank">my website</a> at any time... I will frequently be adding new projects and the like. </p>
 
         </div>
     </div>
