working on flying animation

--- a/Personal/Home/templates/base.html
+++ b/Personal/Home/templates/base.html
@@ -80,5 +80,6 @@
     {% block connect_script %} {% endblock %}
     {% block reaction_time_test_script %} {% endblock %}
     {% block linkedin_bot_script %} {% endblock %}
+    {% block home_script %} {% endblock %}
   </body>
 </html>
