--- a/Personal/Home/templates/home.html
+++ b/Personal/Home/templates/home.html
@@ -5,3 +5,7 @@
 {% block home %}
 
 {% endblock %}
+
+{% block home_script %}
+<script src="{% static 'js/home.js' %}" type="text/javascript"></script>
+{% endblock %}
