log updater completed

--- a/Personal/Home/templates/base.html
+++ b/Personal/Home/templates/base.html
@@ -63,6 +63,7 @@
     {% block display_content %} {% endblock %}
     {% block reaction_time_test %} {% endblock %}
     {% block linkedin_bot %} {% endblock %}
+    {% block access_log_visualizer %} {% endblock %}
     {% block 404 %} {% endblock %}
     {% block 500 %} {% endblock %}
 
@@ -81,5 +82,6 @@
     {% block reaction_time_test_script %} {% endblock %}
     {% block linkedin_bot_script %} {% endblock %}
     {% block home_script %} {% endblock %}
+    {% block access_log_visualizer_script %} {% endblock %}
   </body>
 </html>
