--- a/Personal/Home/templates/access_log_visualizer.html
+++ b/Personal/Home/templates/access_log_visualizer.html
@@ -4,20 +4,16 @@
 {% block access_log_visualizer %}
 
     <div id="access_log_map_container">
-
         <div id="access_log_map_map">
-
         </div>
-
     </div>
-
-    <script
-        initMap()
-    > </script>
 
 {% endblock %}
 
 {% block access_log_visualizer_script %}
-<script src="https://maps.googleapis.com/maps/api/js?key={{maps_api_key}}&callback=initMap"></script>
 <script src="{% static 'js/access_log_visualizer.js' %}" type="text/javascript"></script>
+<script>
+    function initMap(){}
+</script>
+<script async defer src="https://maps.googleapis.com/maps/api/js?key={{maps_api_key}}&callback=initMap"></script>
 {% endblock %}
