--- a/Personal/static/css/main.css
+++ b/Personal/static/css/main.css
@@ -2104,8 +2104,6 @@ div#thank_you_page_inner_container_1 {
   text-align: center;
 }
 
-
-
 /* Projects Home Page */
 
 div.project_home_section {
@@ -2137,7 +2135,6 @@ a.project_home_project_description_links:active {
   color: #cfc259;
   background-color: #6e73ab;
   text-decoration: none;
- 
 }
 
 a#random_word_generator_link p {
@@ -2181,7 +2178,6 @@ img#LinkedIn_Bot_gif {
   height: 80%;
   width: auto;
 }
-
 
 /* Page Headers */
 
@@ -2343,14 +2339,59 @@ div#linkedin_bot_inner_div {
   text-align: center;
 }
 
-/* iframe.linkedin_bot_video {
-  width: 50%;
-  height: 500px;
-} */
-
 div#linkedin_bot_outer_div {
   /* margin: 0 auto; */
   text-align: center;
+}
+
+/* Access Log Visualizer Page */
+
+div#access_log_map_container {
+  margin: 0 auto;
+  width: 75%;
+  height: 500px;
+  z-index: 5;
+  background-color: #fff;
+}
+
+div#access_log_map_map {
+  text-align: center;
+  width: 100%;
+  height: 100%;
+  z-index: 5;
+}
+
+/* Update Access Log Page */
+
+div#update_logs_outer_container {
+  position: relative;
+  margin: 0 auto;
+  margin-top: 10%;
+}
+
+div#update_logs_form_container {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+}
+
+div#update_logs_status_outer_container {
+  position: relative;
+  width: 75%;
+  height: 50vh;
+  text-align: center;
+  margin: 0 auto;
+  margin-top: 10px;
+  border-radius: .25em;
+}
+
+div#update_logs_status_inner_container {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  background-color: #78A091;
+  color: #FFF;
 }
 
 /* Return Links */
