--- a/Personal/Home/templates/project_home_page.html
+++ b/Personal/Home/templates/project_home_page.html
@@ -60,6 +60,18 @@
 
     </div>
 
+    <hr class="target_header">
+
+     <div class="project_home_section">
+        <div class="project_home_project_description_div">
+            <a class="project_home_project_description_links" id="access_log_visualization_link" href="{% url 'access_log_visualizer' %}"><p>Apache Server Access Log Visualization</p></a>
+        </div>
+        <div class="project_home_project_thumbnail_div">
+            <img class="project_home_project_thumbnail_img" id="access_log_visualization_png" src="{% static 'png/access_log_visualization.png' %}" alt="Reaction Time Test Thumbnail">
+        </div>
+
+    </div>
+
 
 
 
